--- a/templates/index.html
+++ b/templates/index.html
@@ -733,7 +733,8 @@
             <div class="about-text">
                 <p>
                     ICTSMARTPRO, kripto para piyasalarındaki karmaşık verileri anlamlı sinyallere dönüştürmek 
-                    için yapay zeka teknolojilerini kullanan bir analiz platformudur. 
+                    için yapay zeka teknolojilerini kullanan bir analiz platformudur.ize take profit noktalarını görmenize yardımcı olur ve profit trail (iz süren stop) ile karınızı maksimize etmenize yardımcı olur. 
+                    İz süren stop özelliği sayesinde açık pozisyonlarınızın tamamı için otomatik iz süren stop algoritması çalıştırarak, ani düşüş anında karınızı korumanıza yardımcı olur. Profit Robot; akıllı algoritmaları, gerçek zamanlı veri analizi ve optimize edilmiş risk yönetimi ile yatırımlarınızı bir üst seviyeye taşır. 
                 </p>
                 <p class="mt-3">
                     Amacımız, trader'lara daha bilinçli karar alma imkanı sunmak, 
